[workspace]
members = [
    "prob_0001",
    "prob_0002",
    "prob_0003",
    "prob_0004",
    "prob_0005",
    "prob_0007",
    "prob_0008",
    "prob_0009",
    "prob_0010",
    "prob_0011",
    "prob_0012",
    "prob_0013",
    "prob_0014",
    "prob_0015",
    "prob_0016",
    "prob_0017",
    "prob_0020",
    "prob_0021",
    "prob_0022",
    "prob_0023",
    "prob_0051",
    "prob_0052",
    "prob_0055",
    "prob_0057",
    "prob_0062",
    "prob_0064",
    "prob_0069",
    "prob_0070",
    "prob_0085",
    "prob_0090",
    "prob_0092",
    "prob_0102",
    "prob_0103",
    "prob_0176",
    "prob_0177",
    "prob_0762",
]
